myteo/test/analyze/type_check/type_parameters/implicit_outside_function_error2.myte
module test

trait Foo {}

// Allowed in parameters but not return type
fun foo(x: Foo): Foo = x

val variable: Foo = 1

fun main() {}